Bugfixes + cleanup + test cases